<resources>
    <string name="app_name">Eventos</string>
    <string name="identityNumber">Documento de identidad</string>
    <string name="observations">Observaciones</string>
    <string name="email">Correo Electronico</string>
    <string name="cellPhone">Numero Celular</string>
    <string name="number">Numero Telefonico</string>
    <string name="address">Direccion</string>
    <string name="city">Ciudad</string>
    <string name="branch">Cooperativa</string>
    <string name="name">Nombre</string>
    <string name="state">Departamento</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="qrCodeRead">Lectura Codigo QR</string>
    <string name="id">Identificador</string>
    <string name="eventName">Nombre del Evento</string>
</resources>
